[tool.poetry]
name = "ledsoundresponsivesuit"
version = "0.1.0"
description = "Sounds responsive code to power neopixels to react to music"
authors = ["cwolfe007 <cwolfe651@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
adafruit-gpio = "1.0.3"
adafruit-mcp3008 = "1.0.2"
adafruit-pureio = "0.2.1"
adafruit-ws2801 = "1.0.1"
enum34 = "1.1.6"
idna = "2.2"
keyring = "10.1"
keyrings-alt = "1.3"
numpy = "1.14.3"
pyasn1 = "0.1.9"
pyxdg = "0.25"
rpi-ws281x = "5.0.0"
rpi-gpio = "0.6.3"
secretstorage = "2.3.1"
six = "1.10.0"
spidev = "3.2"
black = "^23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
